2007-04-12  Mark Wielaard  <mark@klomp.org>

	* configure.ac (COMPILE_GTK_PEER): Add check for cairo >= 1.1.8.

2007-04-11  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/java-nio/javanio.c: Include fcntl.h instead of
	sys/fcntl.h.

2007-04-11  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* native/jni/native-lib/cpproc.c (cpproc_forkAndExec): Fixed
	warning on some compilers, e.g. MIPSpro.

2007-04-11  Francis Kung  <fkung@redhat.com>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_FreetypeGlyphVector.c
	(Java_gnu_java_awt_peer_gtk_FreetypeGlyphVector_getGlyphs): Avoid unneeded
	object reference.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_GdkFontPeer.c
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_getFontMetrics): Unlock font.
	(Java_gnu_java_awt_peer_gtk_GdkFontPeer_setFont): Remove redundant checks.

2007-04-11  Christian Thalinger  <twisti@complang.tuwien.ac.at>

	* configure.ac: Added AC_C_INLINE.

2007-04-10  Mark Wielaard  <mark@klomp.org>

	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	(Java_gnu_java_awt_peer_gtk_ComponentGraphics_initFromVolatile):
	Destroy surface after it is used to create a cairo context.

2007-04-09  Andrew John Hughes  <gnu_andrew@member.fsf.org>

	* javax/management/ObjectName.java:
	(parse(String)): Catch multiple wildcards,
	initialise with an empty string (so null isn't
	appended), and emit comma even when wildcard
	ends the list.
	(checkComponents()): Catch newlines.
	(quote(String)): Handle newlines and quotes
	correctly.

2007-04-09  Francis Kung  <fkung@redhat.com>

	PR 31311
	* gnu/java/awt/peer/gtk/ComponentGraphics.java
	(dispose): Removed method.
	(disposeSurface): Removed method.
	* gnu_java_awt_peer_gtk_ComponentGraphics.h: Regenerated.
	* native/jni/gtk-peer/gnu_java_awt_peer_gtk_ComponentGraphics.c
	(Java_gnu_java_awt_peer_gtk_ComponentGraphics_disposeSurface): Removed.
	(Java_gnu_java_awt_peer_gtk_ComponentGraphics_initState): Destroy surface